# dirduck

./: .dockerignore  .gitignore  Dockerfile  README.md  build.zsh  pyproject.toml
.github/workflows/: build-image.yml
docs/: build_guide.md  docs_ffmpeg_resource_allocation.md  ffmpeg-image-compression-usage.md  ffmpeg-transcoding-usage-zh.md  multiarch-docker-python-uv.md  videotoolbox_quality_calibration.md
scripts/: build.zsh  local_build.zsh  push.zsh
src/dirduck_transcode/: __init__.py  argparser.py  cli.py  media_types.py  models.py  platform.py  processors.py  traversal.py
src/dirduck_transcode/platform/: __init__.py  _apple_docker_linux.py  _apple_mac_native.py  _base.py  _detect.py  _intel_docker_linux.py  _intel_mac_native.py  _select.py
