[project]
name = "dirduck-transcode"
dynamic = ["version"]
description = "Batch transcode videos and images while preserving folder structure."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dirduck-transcode = "dirduck_transcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.uv]
package = true
